// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom comparator should use a custom bundled comparator comparator  1`] = `
Array [
  Object {
    "body": "Found 1 occurences of \\"Long Error with multiple Arguments : (Arg0, Arg7, Arg8)\\"",
    "comments": Array [],
    "id": "3",
    "newOccurrences": Array [],
    "occurrences": Array [
      Object {
        "message": "Long Error with multiple Arguments : (Arg0, Arg7, Arg8)",
        "timestamp": 3,
      },
    ],
    "title": "Long Error with multiple Arguments : (Arg0, Arg7, Arg8)",
    "url": "https://issue-tracker/project/3",
  },
  Object {
    "body": "Found 2 occurences of \\"Long Error with multiple Arguments : (Arg1, Arg2, Arg3)\\"",
    "comments": Array [],
    "id": "1",
    "newOccurrences": Array [
      Object {
        "message": "Long Error with multiple Arguments : (Arg1, Arg2, Arg4)",
        "timestamp": 4,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Long Error with multiple Arguments : (Arg1, Arg2, Arg3)",
        "timestamp": 1,
      },
      Object {
        "message": "Long Error with multiple Arguments : (Arg1, Arg2, Arg4)",
        "timestamp": 4,
      },
    ],
    "title": "Long Error with multiple Arguments : (Arg1, Arg2, Arg3)",
    "url": "https://issue-tracker/project/1",
  },
  Object {
    "body": "Found 1 occurences of \\"Long Error with multiple Arguments : (Arg5, Arg4, Arg3)\\"",
    "comments": Array [],
    "id": "2",
    "newOccurrences": Array [],
    "occurrences": Array [
      Object {
        "message": "Long Error with multiple Arguments : (Arg5, Arg4, Arg3)",
        "timestamp": 2,
      },
    ],
    "title": "Long Error with multiple Arguments : (Arg5, Arg4, Arg3)",
    "url": "https://issue-tracker/project/2",
  },
]
`;

exports[`Custom comparator should use a custom comparator based on an error attribute 1`] = `
Array [
  Object {
    "body": "Found 2 occurences of \\"Error 1\\"",
    "comments": Array [],
    "id": "1",
    "newOccurrences": Array [
      Object {
        "customAttribute": 1,
        "message": "Error 1",
        "timestamp": 3,
      },
    ],
    "occurrences": Array [
      Object {
        "customAttribute": 1,
        "message": "Error 1",
        "timestamp": 1,
      },
      Object {
        "customAttribute": 1,
        "message": "Error 1",
        "timestamp": 3,
      },
    ],
    "title": "Error 1",
    "url": "https://issue-tracker/project/1",
  },
  Object {
    "body": "Found 1 occurences of \\"Error 1\\"",
    "comments": Array [],
    "id": "2",
    "newOccurrences": Array [],
    "occurrences": Array [
      Object {
        "customAttribute": 2,
        "message": "Error 1",
        "timestamp": 2,
      },
    ],
    "title": "Error 1",
    "url": "https://issue-tracker/project/2",
  },
]
`;

exports[`Custom comparator should use a custom comparator based on differences threshold 1`] = `
Array [
  Object {
    "body": "Found 2 occurences of \\"Error 1 : Arg0\\"",
    "comments": Array [],
    "id": "1",
    "newOccurrences": Array [
      Object {
        "message": "Error 1 : Arg1",
        "timestamp": 2,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Error 1 : Arg0",
        "timestamp": 1,
      },
      Object {
        "message": "Error 1 : Arg1",
        "timestamp": 2,
      },
    ],
    "title": "Error 1 : Arg0",
    "url": "https://issue-tracker/project/1",
  },
]
`;

exports[`Track Existing Errors should track an existing error 1`] = `
Array [
  Object {
    "body": "Found 1 occurences of \\"A new error\\"",
    "comments": Array [
      "Found new 1 occurences of A new error",
    ],
    "id": "1",
    "newOccurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 2,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 1,
      },
      Object {
        "message": "A new error",
        "timestamp": 2,
      },
    ],
    "title": "A new error",
    "url": "https://issue-tracker/project/1",
  },
]
`;

exports[`Track Existing Errors should track multiples existing errors 1`] = `
Array [
  Object {
    "body": "Found 2 occurences of \\"Error 1\\"",
    "comments": Array [
      "Found new 3 occurences of Error 1",
    ],
    "id": "1",
    "newOccurrences": Array [
      Object {
        "message": "Error 1",
        "timestamp": 3,
      },
      Object {
        "message": "Error 1",
        "timestamp": 6,
      },
      Object {
        "message": "Error 1",
        "timestamp": 8,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Error 1",
        "timestamp": 1,
      },
      Object {
        "message": "Error 1",
        "timestamp": 3,
      },
      Object {
        "message": "Error 1",
        "timestamp": 6,
      },
      Object {
        "message": "Error 1",
        "timestamp": 8,
      },
    ],
    "title": "Error 1",
    "url": "https://issue-tracker/project/1",
  },
  Object {
    "body": "Found 2 occurences of \\"Error 2\\"",
    "comments": Array [
      "Found new 2 occurences of Error 2",
    ],
    "id": "2",
    "newOccurrences": Array [
      Object {
        "message": "Error 2",
        "timestamp": 4,
      },
      Object {
        "message": "Error 2",
        "timestamp": 7,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Error 2",
        "timestamp": 2,
      },
      Object {
        "message": "Error 2",
        "timestamp": 4,
      },
      Object {
        "message": "Error 2",
        "timestamp": 7,
      },
    ],
    "title": "Error 2",
    "url": "https://issue-tracker/project/2",
  },
  Object {
    "body": "Found 2 occurences of \\"Error 4\\"",
    "comments": Array [],
    "id": "9",
    "newOccurrences": Array [
      Object {
        "message": "Error 4",
        "timestamp": 10,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Error 4",
        "timestamp": 9,
      },
      Object {
        "message": "Error 4",
        "timestamp": 10,
      },
    ],
    "title": "Error 4",
    "url": "https://issue-tracker/project/9",
  },
]
`;

exports[`Track New Errors should track a new error 1`] = `
Array [
  Object {
    "body": "Found 1 occurences of \\"A new error\\"",
    "comments": Array [],
    "id": "1",
    "newOccurrences": Array [],
    "occurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 1,
      },
    ],
    "title": "A new error",
    "url": "https://issue-tracker/project/1",
  },
]
`;

exports[`Track New Errors should zip sames new errors together 1`] = `
Array [
  Object {
    "body": "Found 3 occurences of \\"A new error\\"",
    "comments": Array [],
    "id": "1",
    "newOccurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 3,
      },
      Object {
        "message": "A new error",
        "timestamp": 4,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "A new error",
        "timestamp": 1,
      },
      Object {
        "message": "A new error",
        "timestamp": 3,
      },
      Object {
        "message": "A new error",
        "timestamp": 4,
      },
    ],
    "title": "A new error",
    "url": "https://issue-tracker/project/1",
  },
  Object {
    "body": "Found 2 occurences of \\"Another error\\"",
    "comments": Array [],
    "id": "2",
    "newOccurrences": Array [
      Object {
        "message": "Another error",
        "timestamp": 5,
      },
    ],
    "occurrences": Array [
      Object {
        "message": "Another error",
        "timestamp": 2,
      },
      Object {
        "message": "Another error",
        "timestamp": 5,
      },
    ],
    "title": "Another error",
    "url": "https://issue-tracker/project/2",
  },
  Object {
    "body": "Found 1 occurences of \\"Still an error\\"",
    "comments": Array [],
    "id": "6",
    "newOccurrences": Array [],
    "occurrences": Array [
      Object {
        "message": "Still an error",
        "timestamp": 6,
      },
    ],
    "title": "Still an error",
    "url": "https://issue-tracker/project/6",
  },
]
`;
